
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_6__ TYPE_2__ ;
typedef struct TYPE_5__ TYPE_1__ ;


struct TYPE_6__ {scalar_t__ l38; TYPE_1__* d; } ;
typedef TYPE_2__ e ;
struct TYPE_5__ {scalar_t__ l30; } ;


 int i (TYPE_2__*,int,unsigned char) ;

__attribute__((used)) static void l599(e*a){unsigned
char l170;{if(!(a->d->l30||a->l38))goto l477;l170=4|2;goto l254;l477:
;l170=4;l254:;}i(a,17,l170);}
